fixed all probleams except slight spacing and viewport issue

--- a/css/game.css
+++ b/css/game.css
@@ -1,4 +1,4 @@
 #game {
-	width: 100vh;
-	height: 100vh;
+	width: 50vh;
+	height: 50vh;
 }
